--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,29 @@
   margin: 0px;
   padding: 0px;
 }
+.navbar-inverse {
+    background-color: green;
+    border-color: #080808;
+}
+.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
+    color: #fff;
+    background-color: #8a6d3b;
+}
+.navbar-inverse .navbar-nav > li > a {
+    color: #030808;
+}
+.navbar-inverse .navbar-brand {
+    color: #0a0a0a;
+}
 .jumbotron{
-  height: 200px;
+  height: 150px;
+  text-align: center;
+  color: green;
+}
+.panel-primary > .panel-heading {
+    color: #fff;
+    background-color: green;
+    border-color: green;
 }
 .thumbnail img:hover{
   transform: scale(2);
@@ -17,6 +38,10 @@
 }
 .thumbnail{
   padding-bottom: 0px;
+}
+.bg-primary {
+    color: #fff;
+    background-color: forestgreen;
 }
 
 .item {
@@ -40,7 +65,7 @@
     display:inline;
     position:relative;
     z-index:10;
-    margin:-15px 0
+    margin:-15px;
 }
 .item figure figcaption {
     display:block;
@@ -52,18 +77,18 @@
 }
 .item figure h2 {
     font-family:'Lato';
-    color:red;
+    color:Green;
     font-size:20px;
     text-align:left
 }
 .item figure p {
-    padding: 0px;
+    padding: px;
     display:block;
     font-family:'Lato';
     font-size:20px;
     line-height:18px;
     margin:0;
-    color:#fff;
+    color:black;
     text-align:center;
 }
 .item figure figcaption {
@@ -72,7 +97,7 @@
     width:100%;
     height:100%;
     padding:29px 44px;
-    background-color:rgba(26,76,110,0.5);
+    background-color:rgb(129, 249, 139);
     text-align:center;
     backface-visibility:hidden;
     -webkit-transform:rotateY(-180deg);
@@ -97,4 +122,9 @@
     -webkit-transform:rotateY(0);
     -moz-transform:rotateY(0);
     transform:rotateY(0)
+}
+.searchMessage{
+  color: #a7a5a5;
+  display: none;
+  text-align: center;
 }
